--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </h2>
         <div class="label-box">
           <img
-            class="card__image image-1"
+            class="card__image"
             src="./images/image.jpg"
             alt="Кодинг"
             loading="lazy"
@@ -566,7 +566,7 @@
               height="40"
               fill="none"
             >
-              <use href="./svg/floppy-2.svg#floppy-2"></use>
+              <use href="./svg/floppy.svg#floppy"></use>
             </svg>
             <p class="dialog__title">Вставьте дискету, чтобы продолжить</p>
           </div>
